--- a/src/templates/movies/movies_list.html
+++ b/src/templates/movies/movies_list.html
@@ -6,19 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <style type = 'text/css' href='{% static "css/bootstrap.min.css" %}'></style>
+  <link rel = 'stylesheet' type='text/css' href='{% static "css/bootstrap.min.css" %}'/>
+  <link rel ='stylesheet' type='text/css' href='{% static "css/style.css" %}' />
 </head>
 <body>
-  <div class ='container'>
+  <div class ='container-fluid'>
     <div class = 'row'>
-      <div class = 'col-md-4'>
-        {% for movie in movies %}
-        <div>
+      {% for movie in movies %}
+        <div class='col-3 movie-block'>
           <img src = '{{movie.image.url}}'>
-          {{movie.name}}
+          <div class='movie_title'>{{movie.name}}</div>
+          <div class='release_date'>{{movie.release_date}}</div>
+          <div class='description'>{{movie.description}}</div>
         </div>
-        {% endfor %}
-      </div>
+      {% endfor %}
     </div>
   </div>
 </body>
