--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,12 +1,18 @@
+* {
+  font-family: "Ubuntu", sans-serif;
+}
 .movie-block {
-  margin-bottom:3%;
+  margin-bottom: 3%;
 }
 .movie-block img {
   text-align: center;
-  width:90%;
+  width: 90%;
   display: inline-block;
-  margin:auto;
+  margin: auto;
 }
 .movie_title {
-  text-align:left;
+  text-align: left;
+}
+nav {
+  height: 80px;
 }
