--- a/src/templates/movies/movies_list.html
+++ b/src/templates/movies/movies_list.html
@@ -1,26 +1,12 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel = 'stylesheet' type='text/css' href='{% static "css/bootstrap.min.css" %}'/>
-  <link rel ='stylesheet' type='text/css' href='{% static "css/style.css" %}' />
-</head>
-<body>
-  <div class ='container-fluid'>
-    <div class = 'row'>
-      {% for movie in movies %}
-        <div class='col-3 movie-block'>
-          <img src = '{{movie.image.url}}'>
-          <div class='movie_title'>{{movie.name}}</div>
-          <div class='release_date'>{{movie.release_date}}</div>
-          <div class='description'>{{movie.description}}</div>
-        </div>
-      {% endfor %}
-    </div>
+{% extends 'layouts.html' %} {% block content %}
+<div class="row">
+  {% for movie in movies %}
+  <div class="col-3 movie-block">
+    <img src="{{movie.image.url}}" />
+    <div class="movie_title">{{movie.name}}</div>
+    <div class="release_date">{{movie.release_date}}</div>
+    <div class="description">{{movie.description}}</div>
   </div>
-</body>
-</html>
+  {% endfor %}
+</div>
+{% endblock content %}
