--- a/src/templates/users/signup.html
+++ b/src/templates/users/signup.html
@@ -6,20 +6,16 @@
     <h1>Signup </h1>
     <form action="{% url 'user:signup' %}" method='POST' class='form'>
       {{ csrf_field }}
-      <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-          placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      <!-- {{ form.as_p }} -->
+      {% for field in form %}
+      <div class='form-group'>
+        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+        <input type="text" class="form-control" id="{{ field.id_for_label }}" name="{{ field.html_name }}">
+        {% if field.help_text %}
+        <small id="emailHelp" class="form-text text-muted">{{ field.help_text|safe }}</small>
+        {% endif %}
       </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-      </div>
-      <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-      </div>
+      {% endfor %}
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
